Editing now looks like it’s being edited in DictionaryEditor

--- a/Enfoca/Features/DictionarySelection/DictionarySelection.storyboard
+++ b/Enfoca/Features/DictionarySelection/DictionarySelection.storyboard
@@ -75,7 +75,7 @@
                                         <color key="textColor" red="0.32549019610000002" green="0.34509803919999998" blue="0.37254901959999998" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="64" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oo2-Mn-kct">
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" allowsSelectionDuringEditing="YES" rowHeight="64" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oo2-Mn-kct">
                                         <rect key="frame" x="16" y="117" width="382" height="462"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
@@ -533,8 +533,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Btl-e8-myM"/>
-        <segue reference="Yaf-vT-WQV"/>
-        <segue reference="MdF-bd-erP"/>
+        <segue reference="QEm-8v-cQd"/>
+        <segue reference="nZR-fD-3Hs"/>
+        <segue reference="JRL-ud-1m9"/>
     </inferredMetricsTieBreakers>
 </document>
